g_atomic_int_get, g_atomic_pointer_get: accept const arguments

https://bugzilla.gnome.org/show_bug.cgi?id=697386